--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,32 @@
+
+
 [submodule "lib/pkp"]
 	path = lib/pkp
-	url = git://github.com/pkp/pkp-lib
+	url = https://github.com/carlosandresggdesarrollo/pkp-lib
 [submodule "plugins/generic/usageStats"]
         path = plugins/generic/usageStats
-        url = https://github.com/pkp/usageStats.git
+        url = https://github.com/carlosandresggdesarrollo/usageStats.git
 [submodule "plugins/generic/customBlockManager"]
 	path = plugins/generic/customBlockManager
-	url = git://github.com/pkp/customBlockManager
+	url = https://github.com/carlosandresggdesarrollo/customBlockManager
 [submodule "plugins/generic/staticPages"]
 	path = plugins/generic/staticPages
-	url = git://github.com/pkp/staticPages
+	url = https://github.com/carlosandresggdesarrollo/staticPages
 [submodule "plugins/generic/tinymce"]
 	path = plugins/generic/tinymce
-	url = git://github.com/pkp/tinymce
+	url = https://github.com/carlosandresggdesarrollo/tinymce
 [submodule "docs/manual"]
 	path = docs/manual
-	url = https://github.com/pkp/omp-user-guide
+	url = https://github.com/carlosandresggdesarrollo/omp-user-guide
 [submodule "plugins/blocks/makeSubmission"]
 	path = plugins/blocks/makeSubmission
-	url = https://github.com/pkp/makeSubmission.git
+	url = https://github.com/carlosandresggdesarrollo/makeSubmission.git
 [submodule "plugins/reports/reviewReport"]
 	path = plugins/reports/reviewReport
-	url = https://github.com/pkp/reviewReport
+	url = https://github.com/carlosandresggdesarrollo/reviewReport.git
 [submodule "plugins/generic/googleAnalytics"]
 	path = plugins/generic/googleAnalytics
-	url = https://github.com/pkp/googleAnalytics
+	url = https://github.com/carlosandresggdesarrollo/googleAnalytics
 [submodule "lib/ui-library"]
 	path = lib/ui-library
-	url = https://github.com/pkp/ui-library
+	url = https://github.com/carlosandresggdesarrollo/ui-library
