--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.1-apache
+FROM php:7.3-apache
 RUN docker-php-ext-install mysqli pdo_mysql
 RUN apt-get update \
     && apt-get install -y libzip-dev \
@@ -6,3 +6,4 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/* \
     && docker-php-ext-install zip
 RUN chmod -R 777 /var/www/html
+RUN cp config.TEMPLATE.inc.php config.inc.php
